--- a/templates/patient-activity.html
+++ b/templates/patient-activity.html
@@ -3,14 +3,14 @@
       <div class="clearfix">
         <div class="row">
           <!-- Load side menu -->
-          <div class="col-md-2">
+          <div id="side-panel-scrollbar" class="col-lg-2">
             <div ng-include="'templates/side-panel-menu.html'"></div>
           </div>
           <!-- Right side detail view -->
-          <div class="col-md-10 animated fadeIn">
+          <div class="col-lg-10 animated fadeIn">
             <div class="row main-title">
               <!-- Page title -->
-              <div class="col-md-8 title-content">
+              <div class="col-xs-12 col-md-8 title-content">
                 <span class="fa fa-hourglass-half"></span>
                 <h1><strong>Patient Activity</strong></h1>
               </div>
