--- a/templates/post.html
+++ b/templates/post.html
@@ -117,13 +117,13 @@
               </div>
             </uib-accordion-heading>
             <div class="row">
-              <div class="col-xs-12 col-sm-6 col-md-5" style="margin-bottom: 10px;">
+              <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                 <div class="input-group">
                   <span class="input-group-addon">EN</span>
                   <input class="form-control" type="text" ng-model="post.name_EN" ng-change="setChangesMade()" placeholder="English Title" required="required">
                 </div>
               </div>
-              <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-5" style="margin-bottom: 10px;">
+              <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                 <div class="input-group">
                   <span class="input-group-addon">FR</span>
                   <input class="form-control" type="text" ng-model="post.name_FR" ng-change="setChangesMade()" placeholder="Titre Français" required="required">
