--- a/templates/questionnaire-question.html
+++ b/templates/questionnaire-question.html
@@ -3,14 +3,14 @@
 		<div class="clearfix">
 			<div class="row">
         <!-- Load side menu -->
-				<div class="col-md-2">
+				<div id="side-panel-scrollbar" class="col-lg-2">
 					<div ng-include="'templates/questionnaire-side-menu.html'"></div>
 				</div>
         <!-- Right side view -->
-				<div class="col-md-10 animated fadeIn">
+				<div class="col-lg-10 animated fadeIn">
 					<div class="row main-title">
             <!-- Page title -->
-						<div class="col-md-9 title-content">
+						<div class="col-xs-12 col-md-9 title-content">
 							<span class="fa fa-search"></span>
 							<h1><strong>Manage Question Bank</strong></h1>
 						</div>
@@ -19,13 +19,20 @@
 							<span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Question Bank</strong></span>
 						</div>
 					</div>
-					<div class="row clearfix" style="margin-bottom: 10px; display:flex; align-items: center">
-						<div class="col-md-8">
+					<div class="row clearfix operations">
+						<div class="save-add col-xs-12 col-sm-6 col-md-8">
               <!-- Add button -->
 							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddQuestion()" class="btn btn-md btn-outline item-button">
 								<span style="font-size: 17px;" class="fa fa-plus"></span>
 								<span style="font-size: 20px;"><strong>Add</strong></span>
 							</a>
+						</div>
+						<!-- Search field -->
+						<div class="search col-xs-12 col-sm-6 col-md-4">
+							<div class="form-group has-feedback" style="margin-bottom: 0">
+							<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestion(filterValue)" placeholder="Search...">
+								<span class="glyphicon glyphicon-search form-control-feedback"></span>
+							</div>
 						</div>
 					</div>
           <!-- Load main table -->
@@ -49,20 +56,28 @@
 <!-- Deleting Modal -->
 <script type="text/ng-template" id="deleteQuestionModalContent.htm">
 	<div class="modal-header">
-		<h2 class="modal-title">
-			<span class="glyphicon glyphicon-trash" style="font-size: 30px;"></span> Delete Question: {{questionToDelete.text_EN}}
-			/ {{questionToDelete.text_EN}}
+		<h2 class="modal-title col-xs-12">
+			<span class="glyphicon glyphicon-trash"></span> Delete Question 
 		</h2>
+		<p class="modal-title-caption col-xs-12">
+			{{questionToDelete.text_EN}} / {{questionToDelete.text_EN}}
+		</p>
 	</div>
 	<div class="modal-body">
-		<div class="bs-callout bs-callout-danger">
-			<h4>Question Delete</h4>
-			<p class="deleteText">Are you sure you want to delete the Question "{{questionToDelete.text_EN}}" ?</p>
-			<form method="post" ng-submit="deleteQuestion()">
-				<input class="btn btn-primary" type="submit" value="Delete">
-				<input ng-click="cancel()" class="btn btn-danger" type="button" value="Cancel">
-			</form>
-		</div>
+		<div class="alert alert-danger" role="alert">
+      <strong>Delete Question</strong><br>
+      <p>
+        Are you sure you want to delete the question "{{questionToDelete.text_EN}}" ?
+      </p>
+    </div>
+    <div class="row">
+      <div class="modal-buttons col-xs-12">
+        <form method="post" ng-submit="deleteQuestion()">			
+          <input class="btn btn-primary submit" type="submit" value="Delete">
+          <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
+        </form>
+      </div>
+    </div>
 	</div>
 </script>
 
@@ -70,17 +85,21 @@
 <script type="text/ng-template" id="editQuestionModalContent.htm">
   <!-- Modal title -->
 	<div class="modal-header">
-		<h2 class="modal-title">
-			<div class="col-md-9" style="text-overflow: ellipsis;">
-				<span class="glyphicon glyphicon-pencil" style="font-size: 30px;"></span> Edit Question: {{question.text_EN}} / {{question.text_EN}}
-			</div>
-			<span style="float:right;"> 
-				<form method="post" ng-submit="updateQuestion()">
-					<input class="btn btn-primary" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
-					<input ng-click="cancel()" class="btn btn-danger" type="button" value="Cancel">
-				</form>
-			</span>
+		<h2 class="modal-title col-xs-12">
+			<span class="glyphicon glyphicon-pencil"></span> 
+			Edit Question 
 		</h2>
+		<p class="modal-title-caption col-xs-12">
+			{{question.text_EN}} / {{question.text_EN}}
+		</p>
+		<div class="modal-buttons col-xs-12">
+      <span> 
+        <form method="post" ng-submit="updateQuestion()">
+          <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
+          <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
+        </form>
+      </span>     
+    </div>
 	</div>
 	<div class="modal-body">
 		<uib-accordion>
@@ -91,22 +110,17 @@
 						<strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
 					</div>
 				</uib-accordion-heading>
-				<div class="bs-callout bs-callout-info">
-					<h4>Current Question Titles (EN / FR): {{question.text_EN}} / {{question.text_FR}}</h4>
-					To change the current title(s), enter the new title(s) in the text box(es) below.
-				</div>
 				<div class="row">
-					<div class="col-md-5">
+					<div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
 						<div class="input-group">
 							<span class="input-group-addon">EN</span>
-							<textarea class="form-control" rows="1" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()"></textarea>
+							<textarea class="form-control" rows="2" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()"></textarea>
 						</div>
 					</div>
-					<div class="col-md-1"></div>
-					<div class="col-md-5">
+					<div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
 						<div class="input-group">
 							<span class="input-group-addon">FR</span>
-							<textarea class="form-control" rows="1" ng-model="question.text_EN" placeholder="Titre Français" ng-change="setChangesMade()"></textarea>
+							<textarea class="form-control" rows="2" ng-model="question.text_EN" placeholder="Titre Français" ng-change="setChangesMade()"></textarea>
 						</div>
 					</div>
 				</div>
@@ -119,12 +133,13 @@
 						<strong>Answer Type</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusAnswerType.open, 'glyphicon-chevron-right': !statusAnswerType.open}"></i>
 					</div>
 				</uib-accordion-heading>
-				<div class="bs-callout bs-callout-info">
-					<h4>Current Answer Type:
-						<span ng-show="!atSelected_name_EN">{{question.answertype_name_EN}} / {{question.answertype_name_FR}}</span>
-						<span ng-show="question.answertype_serNum">{{atSelected_name_EN}} / {{atSelected_name_FR}}</span></h4>
-					<p>To change answer type, use the form below.</p>
-				</div>
+				<div class="alert alert-info" role="alert">
+          <strong>Current Answer Type</strong><br>
+          <p>
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+            <span>{{question.answertype_name_EN}} / {{question.answertype_name_FR}}</span>
+          </p>
+        </div>
 				<div class="list-space">
 					<div class="input-group">
 						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
@@ -148,13 +163,14 @@
 						<strong>Question Group</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusQuestionGroup.open, 'glyphicon-chevron-right': !statusQuestionGroup.open}"></i>
 					</div>
 				</uib-accordion-heading>
-				<div class="bs-callout bs-callout-info">
-					<h4>Current Question Group:
-						<span ng-show="!groupSelected_name_EN">{{question.group_name_EN}} / {{question.group_name_FR}}</span>
-						<span ng-show="question.questiongroup_serNum">{{groupSelected_name_EN}} / {{groupSelected_name_FR}}</span>
-					</h4>
-					<p>To change question group, use the form below.</p>
-				</div>
+				<div class="alert alert-info" role="alert">
+          <strong>Current Answer Type</strong><br>
+          <p>
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+            <span ng-if="!groupSelected_name_EN">{{question.group_name_EN}} / {{question.group_name_FR}}</span>
+            <span ng-if="question.questiongroup_serNum">{{groupSelected_name_EN}} / {{groupSelected_name_FR}}</span>
+          </p>
+        </div>
 				<div class="list-space">
 					<div class="input-group">
 						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
