--- a/templates/educational-material-add.html
+++ b/templates/educational-material-add.html
@@ -843,51 +843,57 @@
               </div>  
               <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
                 <div class="col-xs-12 col-md-6">
-                  <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
-                </div>  
+                  <div class="row">
+                    <h2 class="col-xs-12" style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
+                  </div>
+                  <div class="row">
+                    <div ng-repeat="sex in sexes" class="col-xs-12 col-sm-6">
+                      <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: demoFilter.sex == sex.name}" ng-click="sexUpdate(sex)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                        <div class="panel-info" ng-class="{active: demoFilter.sex == sex.name}">
+                          <div class="panel-content" style="text-align:center">
+                            <span style="font-size:30px;" class="fa fa-{{sex.icon}}"></span>
+                            <div class="option-panel-title">{{sex.name}}</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="col-xs-12 col-md-6">
-                  <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
-                </div>
-              </div>
-              <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
-                <div ng-repeat="sex in sexes" class="col-xs-6 col-md-3">
-                  <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: demoFilter.sex == sex.name}" ng-click="sexUpdate(sex)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
-                    <div class="panel-info" ng-class="{active: demoFilter.sex == sex.name}">
-                      <div class="panel-content" style="text-align:center">
-                        <span style="font-size:30px;" class="fa fa-{{sex.icon}}"></span>
-                        <div class="option-panel-title">{{sex.name}}</div>
-                      </div>
-                    </div>
+                  <div class="row">
+                    <h2 class="col-xs-12" style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
                   </div>
-                </div>
-                <div class="col-xs-12 col-md-3">
-                  <div class="panel">
-                    <div class="panel-body form-horizontal">
-                      <div class="form-group">
-                        <label class="control-label col-xs-12 col-lg-2">
-                          MIN
-                        </label>
-                        <div class="col-xs-12 col-lg-10">
-                          <input class="form-control" ng-model="demoFilter.age.min" type="number" ng-change="ageUpdate()" ng-max="demoFilter.age.max" min="0">
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                      <div class="panel">
+                        <div class="panel-body form-horizontal">
+                          <div class="form-group">
+                            <label class="control-label col-xs-12 col-lg-2">
+                              MIN
+                            </label>
+                            <div class="col-xs-12 col-lg-10">
+                              <input class="form-control" ng-model="demoFilter.age.min" type="number" ng-change="ageUpdate()" ng-max="demoFilter.age.max" min="0">
+                            </div>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                </div>          
-                <div class="col-xs-12 col-md-3">
-                  <div class="panel">
-                    <div class="panel-body form-horizontal">
-                      <div class="form-group">
-                        <label class="control-label col-xs-12 col-lg-2">
-                          MAX
-                        </label>
-                        <div class="col-xs-12 col-lg-10">
-                          <input class="form-control" ng-model="demoFilter.age.max" type="number" ng-change="ageUpdate()" max="100" ng-min="demoFilter.age.min">
+                    </div>          
+                    <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                      <div class="panel">
+                        <div class="panel-body form-horizontal">
+                          <div class="form-group">
+                            <label class="control-label col-xs-12 col-lg-2">
+                              MAX
+                            </label>
+                            <div class="col-xs-12 col-lg-10">
+                              <input class="form-control" ng-model="demoFilter.age.max" type="number" ng-change="ageUpdate()" max="100" ng-min="demoFilter.age.min">
+                            </div>
+                          </div>
                         </div>
                       </div>
-                    </div>
+                    </div>  
                   </div>
-                </div>        
+                </div>      
               </div>  
               <!-- SECTION: Activity / Internal Hospital Code filters -->
               <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
