--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -281,6 +281,67 @@
             </div>
           </div>
 
+          <!-- SECTION: Demographic filters -->
+          <div uib-accordion-group is-open="statusDemographicFilter.open"> 
+            <uib-accordion-heading>
+              <div>
+                <strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDemographicFilter.open, 'glyphicon-chevron-right': !statusDemographicFilter.open}"></i>
+              </div>
+            </uib-accordion-heading>
+            <div class="alert alert-info" role="alert">
+              <strong>Current Sex Filter</strong><br>
+              <p>
+                <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                <span ng-if="!demoFilter.sex">None</span>
+                <span ng-if="demoFilter.sex">{{demoFilter.sex}}</span> 
+              </p> <br>
+              <strong>Current Age Group Filter</strong><br>
+              <p>
+                <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                <span ng-if="!demoFilter.age">None</span>
+                <span ng-if="demoFilter.age">{{demoFilter.age.min}} to {{demoFilter.age.max}}</span>
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <div class="row">
+                  <h2 class="col-xs-12" style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
+                </div>
+                <div class="row">
+                  <div ng-repeat="sex in sexes" class="col-xs-12 col-sm-6">
+                    <div class="panel-container animated" style="cursor:pointer" ng-class="{pulse: hover, active: demoFilter.sex == sex.name}" ng-click="sexUpdate(sex)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                      <div class="panel-info" ng-class="{active: demoFilter.sex == sex.name}">
+                        <div class="panel-content" style="text-align:center">
+                          <span style="font-size:30px;" class="fa fa-{{sex.icon}}"></span>
+                          <div class="option-panel-title">{{sex.name}}</div>
+                        </div>
+                      </div>
+                    </div> 
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <div class="row">
+                  <h2 class="col-xs-12" style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div class="input-group">
+                      <span class="input-group-addon">MIN</span>
+                      <input class="form-control" ng-model="demoFilter.age.min" ng-change="setChangesMade()" type="number" ng-max="demoFilter.age.max" min="0">
+                    </div> 
+                  </div>
+                  <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div class="input-group">
+                      <span class="input-group-addon">MAX</span>
+                      <input class="form-control" ng-model="demoFilter.age.max" ng-change="setChangesMade()" type="number" max="100" ng-min="demoFilter.age.min">
+                    </div> 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+
           <!-- SECTION: Appointment/Task filter -->
           <div uib-accordion-group is-open="statusExpressionFilter.open">
             <uib-accordion-heading>
