--- a/templates/questionnaire-completed.html
+++ b/templates/questionnaire-completed.html
@@ -3,14 +3,14 @@
 		<div class="clearfix">
 			<div class="row">
         <!-- Load side menu -->
-				<div class="col-md-2">
+				<div id="side-panel-scrollbar" class="col-lg-2">
 					<div ng-include="'templates/questionnaire-side-menu.html'"></div>
 				</div>
         <!-- Right side view -->
-				<div class="col-md-10 animated fadeIn">
+				<div class="col-lg-10 animated fadeIn">
 					<div class="row main-title">
             <!-- Page title -->
-						<div class="col-md-6 title-content">
+						<div class="col-xs-12 col-md-6 title-content">
 							<span class="fa fa-check"></span>
 							<h1><strong>View Completed Questionnaire</strong></h1>
 						</div>
@@ -21,7 +21,7 @@
 						</div>
 					</div>
 					<div class="none-to-display-container">
-						<div class="jumbotron content col-md-12" style="background-color: transparent;">
+						<div class="jumbotron content col-xs-12" style="background-color: transparent;">
 							<h1 class="icon"><span class="fa fa-pencil-square-o"></span></h1>
 							<p>There are no completed questionnaires</p>
 						</div>
