--- a/templates/questionnaire-side-menu.html
+++ b/templates/questionnaire-side-menu.html
@@ -11,7 +11,7 @@
   </div>
 
   <!-- Back button -->
-	<div class="row side-panel-menu">
+	<div class="row side-panel-menu back-questionnaire">
 		<div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
 			<div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'questionnaire-create'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
 				<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-create'}">
