--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -228,21 +228,21 @@
         </div>
       </div> 
 
-      <!-- SECTION: Appointment/Task filter -->
-      <div uib-accordion-group is-open="statusExpressionFilter.open">
+      <!-- SECTION: Appointment filter -->
+      <div uib-accordion-group is-open="statusAppointmentFilter.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Appointment or Task Code</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
+            <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusAppointmentFilter.open, 'glyphicon-chevron-right': !statusAppointmentFilter.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
-          <strong>Current Activity Filters</strong><br>
+          <strong>Current Appointment Filters</strong><br>
           <p>
-            <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(termList)"></span>
-            <span ng-if="allFilters(termList)">No filter</span>
-            <ul class="list-items" ng-if="!allFilters(termList)">
-              <li ng-repeat="selectedTerm in termList | filter: {added: 1} : 1" ng-hide="allFilters(termList)">
-                {{selectedTerm.name}}
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(appointmentList)"></span>
+            <span ng-if="allFilters(appointmentList)">No filter</span>
+            <ul class="list-items" ng-if="!allFilters(appointmentList)">
+              <li ng-repeat="selectedAppointment in appointmentList | filter: {added: 1} : 1" ng-hide="allFilters(appointmentList)">
+                {{selectedAppointment.name}}
               </li>
             </ul>
           </p>
@@ -250,17 +250,12 @@
         <div class="list-space">
           <div class="input-group">
             <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-            <input class="form-control" type="text" ng-model="termSearchField" ng-change="searchTerm(termSearchField)" placeholder="Search..."/>
+            <input class="form-control" type="text" ng-model="appointmentSearchField" ng-change="searchAppointment(appointmentSearchField)" placeholder="Search..."/>
           </div>
-          <div style="padding: 10px;">
-            <label> 
-              <input type="checkbox" ng-click="selectAllTerms()"> Select All
-            </label>
-          </div>    
           <ul class="list-items">
-            <li ng-repeat="term in termList | filter: searchTermsFilter">
+            <li ng-repeat="appointment in appointmentList | filter: searchAppointmentFilter">
               <label>
-                <input type="checkbox" ng-click="selectItem(term)" ng-checked="term.added" /> {{term.name}}
+                <input type="checkbox" ng-click="selectItem(appointment)" ng-checked="appointment.added" /> {{appointment.name}}
               </label>
             </li>
           </ul>
